Fix lost <> inside thanks

--- a/THANKS
+++ b/THANKS
@@ -143,7 +143,7 @@ Alexandre Moreira <alexandream(at)gmail(dot)com> - pt_BR
 Adrovane Marques Kade <adrovane(at)gmail(dot)com> - pt_BR
 Rafael Peregrino da Silva <rperegrino(at)linuxnewmedia(dot)com(dot)br> - pt_BR
 Alex Eftimie <alex(at)rosedu(dot)org> - ro
-brahmann_ brahmann(at)lifec0re(dot)net - ru
+brahmann_ <brahmann(at)lifec0re(dot)net> - ru
 Nikita E. Shalaev <nshalaev(at)eu(dot)spb(dot)ru> - ru
 stat.c <Static-Const(at)yandex(dot)ru> - ru
 Andrew Drynov <adryno(at)gmail(dot)com> - ru
