Drop the paragraph about self-hosted GTK API docs
We assume that the GTK 2.24 API docs will remain online in the long-term
so there is no reason why we should self-host those docs any longer.
This is the last missing bit of #245.

--- a/HACKING
+++ b/HACKING
@@ -171,15 +171,10 @@ Geany requires GTK >= 2.24 and GLib >= 2.28. API symbols from newer
 GTK/GLib versions should be avoided or made optional to keep the source
 code building on older systems.
 
-The official GTK 2.24 API documentation may not be available online
-anymore, so we put it on http://www.geany.org/manual/gtk/. There
-is also a tarball with all available files for download and use with
-devhelp.
-
-Using the 2.24 API documentation of the GTK libs (including GLib, GDK
-and Pango) has the advantages that you don't get confused by any
-newer API additions and you don't have to take care about whether
-you can use them or not.
+It is recommended to use the 2.24 API documentation of the GTK 
+libs (including GLib, GDK and Pango) has the advantages 
+that you don't get confused by any newer API additions and you 
+don't have to take care about whether you can use them or not.
 
 Coding
 ------
