Fix wrong German translation
The translation did not distinguish between "source file" and "file"
although it makes sense (e.g. for diff files which are not source).

--- a/po/de.po
+++ b/po/de.po
@@ -3129,7 +3129,7 @@ msgstr "%s Quelldatei"
 #: ../src/filetypes.c:95
 #, c-format
 msgid "%s file"
-msgstr "%s Quelldatei"
+msgstr "%s Datei"
 
 #: ../src/filetypes.c:96
 #, c-format
