--- a/po/cs.po
+++ b/po/cs.po
@@ -3795,7 +3795,7 @@ msgid "Print Geany's installation prefix"
 msgstr "Vypsat prefix Geany instalace"
 
 #: ../src/main.c:138
-msgid "Open all FILES in read-only mode (see documention)"
+msgid "Open all FILES in read-only mode (see documentation)"
 msgstr "Otevřít všechny SOUBORY v režimu pouze pro čtení (viz dokumentace)"
 
 #: ../src/main.c:139
