--- a/po/de.po
+++ b/po/de.po
@@ -3822,7 +3822,7 @@ msgid "Print Geany's installation prefix"
 msgstr "Geanys Installationsverzeichnis ausgeben"
 
 #: ../src/main.c:135
-msgid "Open all FILES in read-only mode (see documention)"
+msgid "Open all FILES in read-only mode (see documentation)"
 msgstr ""
 "Alle Dateien nur zum Lesen öffnen (die Dokumentation dazu konsultieren)"
 
