--- a/po/fa.po
+++ b/po/fa.po
@@ -3853,7 +3853,7 @@ msgid "Print Geany's installation prefix"
 msgstr "Print Geany's installation prefix"
 
 #: ../src/main.c:138
-msgid "Open all FILES in read-only mode (see documention)"
+msgid "Open all FILES in read-only mode (see documentation)"
 msgstr ""
 
 #: ../src/main.c:139
