--- a/po/he.po
+++ b/po/he.po
@@ -3706,8 +3706,8 @@ msgid "Print Geany's installation prefix"
 msgstr "Print Geany's installation prefix"
 
 #: ../src/main.c:138
-msgid "Open all FILES in read-only mode (see documention)"
-msgstr "Open all FILES in read-only mode (see documention)"
+msgid "Open all FILES in read-only mode (see documentation)"
+msgstr "Open all FILES in read-only mode (see documentation)"
 
 #: ../src/main.c:139
 msgid "Don't load the previous session's files"
