--- a/po/ko.po
+++ b/po/ko.po
@@ -3914,7 +3914,7 @@ msgid "Print Geany's installation prefix"
 msgstr "지니 설치 폴더 prefix 출력"
 
 #: ../src/main.c:138
-msgid "Open all FILES in read-only mode (see documention)"
+msgid "Open all FILES in read-only mode (see documentation)"
 msgstr ""
 
 #: ../src/main.c:139
