--- a/po/lb.po
+++ b/po/lb.po
@@ -3940,7 +3940,7 @@ msgid "Print Geany's installation prefix"
 msgstr "Den Installatiounsordner vun Geany ausginn"
 
 #: ../src/main.c:138
-msgid "Open all FILES in read-only mode (see documention)"
+msgid "Open all FILES in read-only mode (see documentation)"
 msgstr ""
 
 #: ../src/main.c:139
