--- a/po/mn.po
+++ b/po/mn.po
@@ -3957,7 +3957,7 @@ msgid "Print Geany's installation prefix"
 msgstr ""
 
 #: ../src/main.c:138
-msgid "Open all FILES in read-only mode (see documention)"
+msgid "Open all FILES in read-only mode (see documentation)"
 msgstr ""
 
 #: ../src/main.c:139
