--- a/po/sk.po
+++ b/po/sk.po
@@ -3767,7 +3767,7 @@ msgid "Print Geany's installation prefix"
 msgstr "Zobraziť prefix inštalácie Geany"
 
 #: ../src/main.c:138
-msgid "Open all FILES in read-only mode (see documention)"
+msgid "Open all FILES in read-only mode (see documentation)"
 msgstr "Otvárať všetky súbory iba na čítanie (viď dokumentácia)"
 
 #: ../src/main.c:139
