--- a/po/sv.po
+++ b/po/sv.po
@@ -3775,7 +3775,7 @@ msgid "Print Geany's installation prefix"
 msgstr "Visa Geany's installationsprefix"
 
 #: ../src/main.c:138
-msgid "Open all FILES in read-only mode (see documention)"
+msgid "Open all FILES in read-only mode (see documentation)"
 msgstr "Öppna alla filer som skrivskyddade (se dokumentation)"
 
 #: ../src/main.c:139
