--- a/po/uk.po
+++ b/po/uk.po
@@ -4005,7 +4005,7 @@ msgid "Print Geany's installation prefix"
 msgstr "Введіть префікс встановлення Geany"
 
 #: ../src/main.c:138
-msgid "Open all FILES in read-only mode (see documention)"
+msgid "Open all FILES in read-only mode (see documentation)"
 msgstr ""
 
 #: ../src/main.c:139
