--- a/po/ar.po
+++ b/po/ar.po
@@ -3661,7 +3661,7 @@ msgid "Print Geany's installation prefix"
 msgstr ""
 
 #: ../src/main.c:138
-msgid "Open all FILES in read-only mode (see documention)"
+msgid "Open all FILES in read-only mode (see documentation)"
 msgstr "فتح كل الملفات للقراءة فقط (أُنظر التوثيق)"
 
 #: ../src/main.c:139
