--- a/po/ast.po
+++ b/po/ast.po
@@ -3891,7 +3891,7 @@ msgid "Print Geany's installation prefix"
 msgstr "Imprentar el prefixu d'instalación de Geany"
 
 #: ../src/main.c:138
-msgid "Open all FILES in read-only mode (see documention)"
+msgid "Open all FILES in read-only mode (see documentation)"
 msgstr ""
 
 #: ../src/main.c:139
