--- a/po/be.po
+++ b/po/be.po
@@ -3838,7 +3838,7 @@ msgid "Print Geany's installation prefix"
 msgstr "Друкаваць інсталяцыйны префікс Geany"
 
 #: ../src/main.c:138
-msgid "Open all FILES in read-only mode (see documention)"
+msgid "Open all FILES in read-only mode (see documentation)"
 msgstr ""
 
 #: ../src/main.c:139
