--- a/po/bg.po
+++ b/po/bg.po
@@ -4098,7 +4098,7 @@ msgid "Print Geany's installation prefix"
 msgstr "Отпечатай инсталационната представка на Geany"
 
 #: ../src/main.c:138
-msgid "Open all FILES in read-only mode (see documention)"
+msgid "Open all FILES in read-only mode (see documentation)"
 msgstr ""
 
 #: ../src/main.c:139
