--- a/po/es.po
+++ b/po/es.po
@@ -3844,7 +3844,7 @@ msgid "Print Geany's installation prefix"
 msgstr "Imprimir el prefijo de instalación de Geany"
 
 #: ../src/main.c:138
-msgid "Open all FILES in read-only mode (see documention)"
+msgid "Open all FILES in read-only mode (see documentation)"
 msgstr "Abrir todos los ARCHIVOS en mono de solo-lectura (ver documentación)"
 
 #: ../src/main.c:139
