--- a/po/et.po
+++ b/po/et.po
@@ -3674,7 +3674,7 @@ msgid "Print Geany's installation prefix"
 msgstr "Väljasta Geany paigaldamise prefix"
 
 #: ../src/main.c:138
-msgid "Open all FILES in read-only mode (see documention)"
+msgid "Open all FILES in read-only mode (see documentation)"
 msgstr "Ava kõik FAILID kirjutuskaitsult (vaata dokumentatsiooni)"
 
 #: ../src/main.c:139
