--- a/po/ro.po
+++ b/po/ro.po
@@ -3943,7 +3943,7 @@ msgid "Print Geany's installation prefix"
 msgstr "Afișează prefixul de instalare al Geany"
 
 #: ../src/main.c:138
-msgid "Open all FILES in read-only mode (see documention)"
+msgid "Open all FILES in read-only mode (see documentation)"
 msgstr ""
 
 #: ../src/main.c:139
