--- a/po/vi.po
+++ b/po/vi.po
@@ -3892,7 +3892,7 @@ msgid "Print Geany's installation prefix"
 msgstr "In tiền tố cài đặt của Geany"
 
 #: ../src/main.c:138
-msgid "Open all FILES in read-only mode (see documention)"
+msgid "Open all FILES in read-only mode (see documentation)"
 msgstr ""
 
 #: ../src/main.c:139
